style: add css for button in RegistrationPage.css and fix NavigationBar.css hover overlay alignment

--- a/frontend/src/css/NavigationBar.css
+++ b/frontend/src/css/NavigationBar.css
@@ -36,7 +36,7 @@ body, html {
     text-decoration: underline;
     text-underline-style: thick;
     text-decoration-color: #0f68ed;
-    text-underline-offset: 3rem;
+    text-underline-offset: 2rem;
     text-decoration-thickness: 5px;
 }
 
