--- a/frontend/src/css/RegistrationPage.css
+++ b/frontend/src/css/RegistrationPage.css
@@ -1,5 +1,5 @@
 .center {
-  text-align: center;
+    text-align: center;
 }
 
 .container {
@@ -8,7 +8,6 @@
     border: 1px solid #e0e0e0;
     border-radius: 20px;
     max-width: 400px;
-
 
     display: flex;
     flex-direction: column;
@@ -35,13 +34,10 @@
 
 .container-input {
     border-radius: 100px;
-    margin-top: 16px;
     width: 300px;
-
     font-weight: bold;
     font-size: 14px;
     padding: 14px 16px;
-
     transition: background-color 0.2s ease;
 
 }
@@ -49,17 +45,19 @@
 .container-button {
     background: #026bff;
     color: white;
-
-    border-radius: 100px;
-
-    font-weight: bold;
-    font-size: 14px;
     cursor: pointer;
+    border-radius: 100px;
+    padding: 14px 16px;
+    font-weight: bold;
+    font-size: 20px;
+
 }
 
-.button-pressed {
-
+.container-button:hover {
+    background: #02347c;
 }
+
+
 
 
 
